test_case/rust-lang_rust/49350_377489160.rs
plain
Receiving objects:  16% (124114/751321), 34.44 MiB | 907.00 KiB/s
Receiving objects:  16% (125153/751321), 35.11 MiB | 714.00 KiB/s
Receiving objects:  16% (125648/751321), 35.94 MiB | 694.00 KiB/s
Receiving objects:  16% (126032/751321), 36.74 MiB | 697.00 KiB/s
Receiving objects:  16% (126782/751321), 37.59 MiB | 767.00 KiB/s
Receiving objects:  16% (127473/751321), 38.54 MiB | 836.00 KiB/s
Receiving objects:  17% (127725/751321), 38.54 MiB | 836.00 KiB/s
Receiving objects:  17% (127814/751321), 39.60 MiB | 906.00 KiB/s
Receiving objects:  17% (128090/751321), 40.85 MiB | 1001.00 KiB/s
---
Receiving objects:  19% (147031/751321), 60.80 MiB | 876.00 KiB/s
Receiving objects:  19% (148453/751321), 61.92 MiB | 862.00 KiB/s
---
Receiving objects:  23% (172804/751321), 81.29 MiB | 1000.00 KiB/s
Receiving objects:  23% (173051/751321), 81.68 MiB | 900.00 KiB/s
Receiving objects:  23% (174258/751321), 82.55 MiB | 762.00 KiB/s
Receiving objects:  23% (175556/751321), 83.52 MiB | 793.00 KiB/s
Receiving objects:  23% (178772/751321), 84.70 MiB | 911.00 KiB/s
Receiving objects:  24% (180318/751321), 85.49 MiB | 1008.00 KiB/s
---
Receiving objects:  28% (214390/751321), 100.15 MiB | 1020.00 KiB/s
Receiving objects:  29% (217884/751321), 101.06 MiB | 992.00 KiB/s
Receiving objects:  29% (219268/751321), 101.06 MiB | 992.00 KiB/s
Receiving objects:  29% (223660/751321), 101.99 MiB | 974.00 KiB/s
Receiving objects:  30% (225397/751321), 102.47 MiB | 953.00 KiB/s
Receiving objects:  30% (228170/751321), 102.91 MiB | 942.00 KiB/s
Receiving objects:  30% (232449/751321), 103.86 MiB | 933.00 KiB/s
Receiving objects:  31% (232910/751321), 104.28 MiB | 912.00 KiB/s
Receiving objects:  31% (234264/751321), 104.80 MiB | 922.00 KiB/s
Receiving objects:  31% (234289/751321), 105.89 MiB | 964.00 KiB/s
Receiving objects:  31% (234313/751321), 106.90 MiB | 982.00 KiB/s
Receiving objects:  31% (234341/751321), 107.92 MiB | 1003.00 KiB/s
Receiving objects:  31% (235609/751321), 108.93 MiB | 1024.00 KiB/s
Receiving objects:  31% (238537/751321), 109.60 MiB | 940.00 KiB/s
Receiving objects:  32% (240423/751321), 109.60 MiB | 940.00 KiB/s
Receiving objects:  32% (243389/751321), 110.47 MiB | 901.00 KiB/s
Receiving objects:  32% (247122/751321), 111.28 MiB | 853.00 KiB/s
Receiving objects:  33% (247936/751321), 111.28 MiB | 853.00 KiB/s
Receiving objects:  33% (251521/751321), 112.18 MiB | 826.00 KiB/s
Receiving objects:  34% (255450/751321), 112.68 MiB | 833.00 KiB/s
Receiving objects:  34% (256586/751321), 113.19 MiB | 870.00 KiB/s
Receiving objects:  34% (260170/751321), 114.15 MiB | 921.00 KiB/s
Receiving objects:  35% (262963/751321), 114.68 MiB | 934.00 KiB/s
Receiving objects:  35% (264657/751321), 114.68 MiB | 934.00 KiB/s
Receiving objects:  35% (269914/751321), 115.72 MiB | 979.00 KiB/s
Receiving objects:  36% (270476/751321), 116.11 MiB | 962.00 KiB/s
Receiving objects:  36% (271119/751321), 116.50 MiB | 950.00 KiB/s
Receiving objects:  36% (272974/751321), 117.44 MiB | 931.00 KiB/s
Receiving objects:  36% (274316/751321), 118.55 MiB | 959.00 KiB/s
Receiving objects:  36% (275357/751321), 119.64 MiB | 967.00 KiB/s
Receiving objects:  36% (276374/751321), 120.70 MiB | 1019.00 KiB/s
---
Receiving objects:  40% (300529/751321), 125.21 MiB | 1008.00 KiB/s
Receiving objects:  40% (301694/751321), 125.58 MiB | 975.00 KiB/s
Receiving objects:  40% (302023/751321), 126.40 MiB | 895.00 KiB/s
Receiving objects:  40% (302466/751321), 127.31 MiB | 866.00 KiB/s
Receiving objects:  40% (305745/751321), 128.25 MiB | 839.00 KiB/s
Receiving objects:  41% (308042/751321), 128.70 MiB | 847.00 KiB/s
Receiving objects:  41% (308733/751321), 129.21 MiB | 883.00 KiB/s
Receiving objects:  41% (311350/751321), 130.21 MiB | 932.00 KiB/s
Receiving objects:  41% (313133/751321), 131.12 MiB | 945.00 KiB/s
Receiving objects:  42% (315555/751321), 131.12 MiB | 945.00 KiB/s
Receiving objects:  42% (316034/751321), 131.61 MiB | 945.00 KiB/s
Receiving objects:  42% (316070/751321), 132.41 MiB | 910.00 KiB/s
Receiving objects:  42% (316122/751321), 133.07 MiB | 849.00 KiB/s
Receiving objects:  42% (316746/751321), 133.78 MiB | 784.00 KiB/s
Receiving objects:  42% (320356/751321), 134.69 MiB | 788.00 KiB/s
Receiving objects:  43% (323069/751321), 135.18 MiB | 794.00 KiB/s
Receiving objects:  43% (325364/751321), 135.76 MiB | 825.00 KiB/s
Receiving objects:  43% (326813/751321), 137.04 MiB | 954.00 KiB/s
---
Receiving objects:  48% (367830/751321), 157.29 MiB | 919.00 KiB/s
Receiving objects:  48% (367903/751321), 158.10 MiB | 876.00 KiB/s
Receiving objects:  49% (368148/751321), 158.53 MiB | 852.00 KiB/s
Receiving objects:  49% (368468/751321), 158.88 MiB | 805.00 KiB/s
Receiving objects:  49% (368506/751321), 159.25 MiB | 783.00 KiB/s
Receiving objects:  49% (368612/751321), 159.96 MiB | 745.00 KiB/s
Receiving objects:  49% (369302/751321), 160.79 MiB | 768.00 KiB/s
Receiving objects:  49% (369803/751321), 161.79 MiB | 810.00 KiB/s
Receiving objects:  49% (370391/751321), 162.96 MiB | 899.00 KiB/s
Receiving objects:  49% (370630/751321), 164.09 MiB | 988.00 KiB/s
---
Receiving objects:  50% (380215/751321), 170.36 MiB | 1002.00 KiB/s
Receiving objects:  51% (383174/751321), 170.79 MiB | 966.00 KiB/s
Receiving objects:  51% (386709/751321), 171.22 MiB | 919.00 KiB/s
Receiving objects:  52% (390687/751321), 171.64 MiB | 881.00 KiB/s
Receiving objects:  52% (392256/751321), 172.07 MiB | 862.00 KiB/s
Receiving objects:  52% (395731/751321), 172.98 MiB | 884.00 KiB/s
Receiving objects:  53% (398201/751321), 173.97 MiB | 908.00 KiB/s
Receiving objects:  53% (398356/751321), 173.97 MiB | 908.00 KiB/s
Receiving objects:  53% (399512/751321), 175.13 MiB | 958.00 KiB/s
Receiving objects:  53% (401870/751321), 175.70 MiB | 988.00 KiB/s
Receiving objects:  53% (402837/751321), 176.74 MiB | 1.00 MiB/s
Receiving objects:  53% (405575/751321), 177.62 MiB | 1023.00 KiB/s
Receiving objects:  54% (405714/751321), 178.63 MiB | 1021.00 KiB/s
Receiving objects:  54% (405953/751321), 178.63 MiB | 1021.00 KiB/s
Receiving objects:  54% (406589/751321), 179.56 MiB | 970.00 KiB/s
Receiving objects:  54% (409348/751321), 180.56 MiB | 939.00 KiB/s
Receiving objects:  54% (410984/751321), 181.48 MiB | 938.00 KiB/s
Receiving objects:  54% (411019/751321), 182.07 MiB | 867.00 KiB/s
Receiving objects:  54% (411344/751321), 182.82 MiB | 812.00 KiB/s
Receiving objects:  54% (411369/751321), 183.65 MiB | 799.00 KiB/s
Receiving objects:  54% (411388/751321), 184.29 MiB | 712.00 KiB/s
Receiving objects:  54% (411412/751321), 185.05 MiB | 721.00 KiB/s
Receiving objects:  54% (411442/751321), 185.95 MiB | 784.00 KiB/s
Receiving objects:  54% (411477/751321), 187.02 MiB | 836.00 KiB/s
Receiving objects:  54% (411513/751321), 188.02 MiB | 894.00 KiB/s
Receiving objects:  54% (411553/751321), 188.60 MiB | 949.00 KiB/s
Receiving objects:  54% (411598/751321), 189.64 MiB | 1009.00 KiB/s
---
Receiving objects:  55% (415995/751321), 201.55 MiB | 979.00 KiB/s
Receiving objects:  55% (416027/751321), 202.53 MiB | 920.00 KiB/s
Receiving objects:  55% (416078/751321), 203.61 MiB | 924.00 KiB/s
Receiving objects:  56% (420740/751321), 204.18 MiB | 958.00 KiB/s
Receiving objects:  56% (420938/751321), 204.18 MiB | 958.00 KiB/s
Receiving objects:  56% (421620/751321), 205.17 MiB | 992.00 KiB/s
Receiving objects:  56% (422427/751321), 206.11 MiB | 1001.00 KiB/s
Receiving objects:  56% (422747/751321), 207.10 MiB | 1009.00 KiB/s
Receiving objects:  56% (423179/751321), 207.82 MiB | 930.00 KiB/s
Receiving objects:  56% (423961/751321), 208.53 MiB | 853.00 KiB/s
Receiving objects:  56% (426959/751321), 209.35 MiB | 821.00 KiB/s
Receiving objects:  57% (428253/751321), 209.82 MiB | 822.00 KiB/s
Receiving objects:  57% (432147/751321), 210.36 MiB | 830.00 KiB/s
Receiving objects:  58% (435767/751321), 210.95 MiB | 852.00 KiB/s
Receiving objects:  58% (437695/751321), 211.58 MiB | 910.00 KiB/s
Receiving objects:  58% (441990/751321), 212.71 MiB | 1010.00 KiB/s
---
Receiving objects:  61% (460420/751321), 221.36 MiB | 960.00 KiB/s
Receiving objects:  61% (460447/751321), 221.79 MiB | 929.00 KiB/s
Receiving objects:  61% (460483/751321), 222.77 MiB | 959.00 KiB/s
Receiving objects:  61% (461193/751321), 223.88 MiB | 991.00 KiB/s
---
Receiving objects:  66% (495872/751321), 236.89 MiB | 1013.00 KiB/s
Receiving objects:  66% (499264/751321), 237.46 MiB | 1001.00 KiB/s
Receiving objects:  67% (503386/751321), 238.08 MiB | 1.00 MiB/s
Receiving objects:  67% (505691/751321), 238.64 MiB | 1.00 MiB/s
Receiving objects:  67% (509059/751321), 239.57 MiB | 1020.00 KiB/s
Receiving objects:  67% (509812/751321), 240.42 MiB | 992.00 KiB/s
Receiving objects:  68% (510899/751321), 240.82 MiB | 985.00 KiB/s
Receiving objects:  68% (511323/751321), 241.25 MiB | 970.00 KiB/s
Receiving objects:  68% (513833/751321), 242.32 MiB | 942.00 KiB/s
Receiving objects:  68% (514770/751321), 243.62 MiB | 997.00 KiB/s
---
Receiving objects:  79% (593544/751321), 288.26 MiB | 992.00 KiB/s
Receiving objects:  79% (593979/751321), 288.68 MiB | 949.00 KiB/s
Receiving objects:  79% (595972/751321), 289.64 MiB | 903.00 KiB/s
Receiving objects:  79% (598392/751321), 290.75 MiB | 888.00 KiB/s
Receiving objects:  79% (598392/751321), 292.00 MiB | 1000.00 KiB/s
---
Receiving objects:  84% (635020/751321), 304.42 MiB | 935.00 KiB/s
Receiving objects:  84% (638053/751321), 305.36 MiB | 884.00 KiB/s
Receiving objects:  85% (638623/751321), 305.36 MiB | 884.00 KiB/s
Receiving objects:  85% (644097/751321), 306.29 MiB | 888.00 KiB/s
Receiving objects:  86% (646137/751321), 306.72 MiB | 863.00 KiB/s
Receiving objects:  86% (647178/751321), 307.07 MiB | 833.00 KiB/s
Receiving objects:  86% (651395/751321), 307.86 MiB | 842.00 KiB/s
Receiving objects:  87% (653650/751321), 308.27 MiB | 850.00 KiB/s
Receiving objects:  87% (656075/751321), 308.71 MiB | 848.00 KiB/s
Receiving objects:  88% (661163/751321), 309.13 MiB | 835.00 KiB/s
Receiving objects:  88% (661331/751321), 309.59 MiB | 832.00 KiB/s
Receiving objects:  88% (663417/751321), 310.31 MiB | 801.00 KiB/s
Receiving objects:  88% (666511/751321), 311.01 MiB | 799.00 KiB/s
Receiving objects:  89% (668676/751321), 311.43 MiB | 796.00 KiB/s
Receiving objects:  89% (669014/751321), 311.43 MiB | 796.00 KiB/s
Receiving objects:  89% (672152/751321), 312.27 MiB | 791.00 KiB/s
Receiving objects:  90% (676189/751321), 313.30 MiB | 825.00 KiB/s
Receiving objects:  90% (677916/751321), 313.30 MiB | 825.00 KiB/s
Receiving objects:  90% (681660/751321), 314.31 MiB | 883.00 KiB/s
Receiving objects:  91% (683703/751321), 315.14 MiB | 910.00 KiB/s
Receiving objects:  91% (683936/751321), 315.14 MiB | 910.00 KiB/s
Receiving objects:  91% (691096/751321), 316.07 MiB | 938.00 KiB/s
Receiving objects:  92% (691216/751321), 316.07 MiB | 938.00 KiB/s
Receiving objects:  92% (694516/751321), 316.98 MiB | 936.00 KiB/s
Receiving objects:  92% (698397/751321), 317.98 MiB | 924.00 KiB/s
Receiving objects:  93% (698729/751321), 317.98 MiB | 924.00 KiB/s
Receiving objects:  93% (702988/751321), 319.11 MiB | 975.00 KiB/s
---
Resolving deltas: 100% (612161/612161), completed with 4843 local objects.
---
[00:00:42] configure: rust.quiet-tests     := True
---
[00:35:04] .........................................................................i..........................
[00:35:09] ................i.............................F.....................................................
---
[00:35:41] .............................................................................................i......
[00:35:48] .................................................................i..................................
---
[00:36:07] - error: missing `fn`, `type`, or `const` for impl-item declaration
[00:36:07] + error: missing `fn`, `type` or `const` for impl-item declaration
[00:36:07] 2   --> $DIR/issue-40006.rs:11:9
[00:36:07] 3    |
[00:36:07] 4 LL |   impl X { //~ ERROR cannot be made into an object
[00:36:07]
[00:36:07] 5    |  _________^
[00:36:07] 6 LL | | //~^ ERROR missing
[00:36:07] 7 LL | |     Y
[00:36:07] -    | |____^ missing `fn`, `type`, or `const`
[00:36:07] +    | |____^ `fn`, `type` or `const`
[00:36:07] 9
[00:36:07] - error: missing `fn`, `type`, or `const` for trait-item declaration
[00:36:07] + error: missing `fn`, `type` or `const` for trait-item declaration
[00:36:07] 11   --> $DIR/issue-40006.rs:18:10
[00:36:07] 12    |
[00:36:07] 13 LL |   trait X { //~ ERROR missing
[00:36:07]
[00:36:07] 14    |  __________^
[00:36:07] 15 LL | |     X() {}
[00:36:07] -    | |____^ missing `fn`, `type`, or `const`
[00:36:07] +    | |____^ `fn`, `type` or `const`
[00:36:07] 17
[00:36:07] 18 error: expected `[`, found `#`
[00:36:07] 19   --> $DIR/issue-40006.rs:20:17
[00:36:07]
[00:36:07] 21 LL |     fn xxx() { ### } //~ ERROR missing
[00:36:07] 22    |                 ^ expected `[`
[00:36:07] 23
[00:36:07] - error: missing `fn`, `type`, or `const` for trait-item declaration
[00:36:07] + error: missing `fn`, `type` or `const` for trait-item |  __________^\nLL | |     X() {}\n   | |____^ `fn`, `type` or `const`\n\n"}
[00:36:07] {"message":"expected `[`, found `#`","code":null,"level":"error","spans":[{"file_name":"/checkout/src/test/ui/did_you_mean/issue-40006.rs","byte_start":610,"byte_end":611,"line_start":20,"line_end":20,"column_start":17,"column_end":18,"is_primary":true,"text":[{"text":"    fn xxx() { ### } //~ ERROR missing","highlight_start":17,"highlight_end":18}],"label":"expected `[`","suggested_replacement":null,"expansion":null}],"children":[],"rendered":"error: expected `[`, found `#`\n  --> /checkout/src/test/ui/did_you_mean/issue-40006.rs:20:17\n   |\nLL |     fn xxx() { ### } //~ ERROR missing\n   |                 ^ expected `[`\n\n"}
[00:36:07] {"message":"missing `fn`, `type` or `const` for trait-item declaration","code":null,"level":"error","spans":[{"file_name":"/checkout/src/test/ui/did_you_mean/issue-40006.rs","byte_start":614,"byte_end":661,"line_start":20,"line_end":22,"column_start":21,"column_end":5,"is_primary":true,"text":[{"text":"    fn xxx() { ### } //~ ERROR missing","highlight_start":21,"highlight_end":39},{"text":"    //~^ ERROR expected","highlight_start":1,"highlight_end":24},{"text":"    L = M; //~ ERROR missing","highlight_start":1,"highlight_end":5}],"label":"`fn`, `type` or `const`","suggested_replacement":null,"expansion":null}],"children":[],"rendered":"error: missing `fn`, `type` or `const` for trait-item declaration\n  --> /checkout/src/test/ui/did_you_mean/issue-40006.rs:20:21\n   |\nLL |       fn xxx() { ### } //~ ERROR missing\n   |  _____________________^\nLL | |     //~^ ERROR expected\nLL | |     L = M; //~ ER3:18\n   |\nLL |     Z = { 2 + 3 }; //~ ERROR expected one of\n   |                  ^ expected one of `const`, `extern`, `fn`, `type`, `unsafe`, or `}` here\n\n"}
[00:36:07] {"message":"expected one of `!` or `::`, found `(`","code":null,"level":"error","spans":[{"file_name":"/checkout/src/test/ui/did_you_mean/issue-40006.rs","byte_start":739,"byte_end":740,"line_start":24,"line_end":24,"column_start":9,"column_end":10,"is_primary":true,"text":[{"text":"    ::Y (); //~ ERROR expected one of","highlight_start":9,"highlight_end":10}],"label":"expected one of `!` or `::` here","suggested_replacement":null,"expansion":null}],"children":[],"rendered":"error: expected one of `!` or `::`, found `(`\n  --> /checkout/src/test/ui/did_you_mean/issue-40006.rs:24:9\n   |\nLL |     ::Y (); //~ ERROR expected one of\n   |         ^ expected one of `!` or `::` here\n\n"}
[00:36:07] {"message":"missing `fn`, `type` or `const` for impl-item declaration","code":null,"level":"error","spans":[{"file_name":"/checkout/src/test/ui/did_you_mean/issue-40006.rs","byte_start":788,"byte_end":789,"line_start":28,"line_end":28,"column_start":8,"column_end":9,"is_primary":true,"text":[{"text":"    pub hello_method(&self) { //~ ERROR missing","highlight_start":8,"highlight_end":9}],"label":"`fn`, `type` or `const`","suggested_replacement":null,"expansion":null}],"children":[],"rendered":"error: missing `fn`, `type` or `const` for impl-item declaration\n  --> /checkout/src/test/ui/did_you_mean/issue-40006.rs:28:8\n   |\nLL |     pub hello_method(&self) { //~ ERROR missing\n   |        ^ `fn`, `type` or `const`\n\n"}
[00:36:07] {"message":"the trait `X` cannot be made into an object","code":{"code":"E0038","explanation":"\nTrait objects like `Box<Trait>` can only be constructed when certain\nrequirements are satisfied by the trait in question.\n\nTrait objects are a form of dynamic dispatch and use a dynamically sized type\nfor the inner type. So, for a given trait `Trait`, when `Trait` is treated as a\ntype, as in `Box<Trait>`, the inner type is 'unsized'. In such cases the boxed\npointer is a 'fat pointer' that contains an extra pointer to a table of methods\n(among other things) for dynamic dispatch. This design mandates some\nrestrictions on the types of traits that are allowed to be used in trait\nobjects, which are collectively termed as 'object safety' rules.\n\nAttempting to create a trait object for a non object-safe trait will trigger\nthis error.\n\nThere are various rules:\n\n### The trait cannot require `Self: Sized`\n\nWhen `Trait` is treated as a type, the type does not implement the special\n`Sized` trait, because the type does not have a known size at compile time and\ncan only be accessed behind a pointer. Thus, if we have a trait like the\nfollowing:\n\n